# Ingeniero_datos_p_tecnica

./: .gitignore  README.md  main.py  modelo_3fn.sql  pyproject.toml
docker/: docker-compose.yml
docker/docker/: postmaster.pid
docker/docker/base/1/: 2619  pg_internal.init
docker/docker/base/16384/: 1247  1249  1249_fsm  1259  2608  2610  2610_fsm  2619  2619_fsm  2619_vm  2658  2659  2662  2663  2673  2674  2678  2679  2696  2703  2704  2840  2840_fsm  2840_vm  2841  3455  pg_internal.init
docker/docker/base/5/: pg_internal.init
docker/docker/global/: 1260  1262  2671  pg_control  pg_internal.init
docker/docker/pg_subtrans/: 0007
docker/docker/pg_xact/: 0000
logs/: extract_log
notebooks/: notbook_log  prueba_tecnica.ipynb
src/data/: conexion.py  extract.py  load.py  transform.py
src/pipeline/: pipeline.py
src/utils/: helpers.py
